# axon

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  agents.md  conftest.py  docker-compose.yml  main.py  makefile  mypy.ini  pyproject.toml
agent/: audio_notifier.py  calendar_exporter.py  context_manager.py  date_parser.py  doc_source_tracker.py  fallback_prompt.py  github_auto_commit.py  goal_tracker.py  habit_tracker.py  hosted_proxy.py  llm_router.py  mcp_handler.py  mcp_metrics.py  mcp_router.py  notifier.py  pasteback_handler.py  plugin_context.py  plugin_loader.py  proactive_memory.py  reminder.py  response_shaper.py  session_tracker.py
axon/: __init__.py
backend/: Dockerfile  main.py
config/: mcp_servers.yaml  settings.example.yaml  settings.py  settings.yaml  user_prefs.yaml
data/: initial_memory.yaml  memory_store.json
docs/: api.md  mcp_setup.md  models.md  phase1_features.md  phase2_features.md  phase3_features.md  phase4_features.md  phase5_features.md  plugins.md  setup.md
frontend/: Dockerfile  index.html  manifest.json  package.json  serviceWorker.ts  tsconfig.app.json  tsconfig.sw.json  vite.config.ts
git-hooks/: commit-msg
mcp_servers/: __main__.py  calculator_server.py  docs_server.py  filesystem_server.py  github_server.py  markdown_backup_server.py  query_server.py  time_server.py  wolframalpha_server.py
memory/: markdown_sync.py  memory_handler.py  preload.py  speaker_embedding.py  user_profile.py  vector_store.py
phases/: axon_phase_10_dev_roadmap.md  axon_phase_11_dev_roadmap.md  axon_phase_12_dev_roadmap.md  axon_phase_13_dev_roadmap.md  axon_phase_14_dev_roadmap.md  axon_phase_15_dev_roadmap.md  axon_phase_16_dev_roadmap.md  axon_phase_17_dev_roadmap.md  axon_phase_18_dev_roadmap.md  axon_phase_19_dev_roadmap.md  axon_phase_1_dev_roadmap.md  axon_phase_20.1_dev_roadmap.md  axon_phase_20_dev_roadmap.md  axon_phase_2_dev_roadmap.md  axon_phase_3_dev_roadmap.md  axon_phase_4_dev_roadmap.md  axon_phase_5_dev_roadmap.md  axon_phase_6_dev_roadmap.md  axon_phase_7_dev_roadmap.md  axon_phase_8_dev_roadmap.md  axon_phase_9_dev_roadmap.md  readme.md  roadmap.md
(+109 files in other folders)
