[tool.poetry]
license = "MIT"
name = "axon"
version = "0.2.1"
description = "Axon Project"
authors = ["Your Name <you@example.com>"]
package-mode = false

[project]
name = "axon"
version = "0.2.1"
description = "Axon Project"
dynamic = ["dependencies", "optional-dependencies"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
typer = "^0.9.0"
requests = "^2.31.0"
httpx = "^0.27.0"
pyperclip = "^1.8.2"
keyboard = "^0.13.5"
qwen-agent = "0.0.27"
python-dateutil = "^2.9.0.post0"
rich = "^14.0.0"
qrcode = "^7.4"
redis = "^5.0.0"


[project.optional-dependencies]
calendar = ["icalendar"]
postgres = ["psycopg2-binary"]
vector = ["qdrant-client"]
notify = ["plyer"]

[tool.poetry.group.dev.dependencies]
ruff = "==0.3.2"
mypy = "==1.9.0"
pytest = "==8.1.1"
pre-commit = "==3.7.0"
black = "==24.4.2"
pip-licenses = "==5.0.0"

[tool.ruff]
target-version = "py311"
line-length = 100
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP007"]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
